Static check fixes
Change-Id: Ie364bd49309248123d8e88e974cca6c364669661
Signed-off-by: Archana Rai <archana.rai@sap.com>